:sparkles: Allow override of ConfigData.Options
Update `ConfigDataEnvironmentUpdateListener` to allow
to override the actual ConfigData.Options that will be used for
any specific contributor.